Release 8.19   Bioregion endemics calculated and displayed.